@@ -11,6 +11,7 @@
         "PlanetsLib", 
         "Krastorio2Assets", 
         "rabbasca-assets = 1.2.0",
+        "tile-upgrade-planner-muluna >= 1.0.1",
         "? any-planet-start",
         "(?) planet-muluna",
         "(?) pelagos"
