@@ -107,7 +107,7 @@ bunnyhop-engine=A device that allows easy interplanetary travel.\nOnce activated
 vault-access-key=Shoot it into [entity=rabbasca-vault-spawner] to hack it.
 vault-security-key=A stronger version of [item=vault-access-key], hacks faster and provides more durability for attempted hacks.
 rabbasca-hyperjuice=You clearly had one [item=rabbasca-protein-shake] too many inventing this...\nCan be both used as personal equipment and fed to machines as an alternative to [item=nutrients].
-haronite-plate=Extremely durable material. Also a flooring that allows [item=harene-ears-core] to draw power from the harenic energy field it emits.
+haronite-plate=Extremely durable material. Also a flooring that covers [item=space-platform-foundation] (use [item=tile-upgrade-planner]) that allows [item=harene-ears-core] to draw power from the harenic energy field it emits.
 
 [recipe-name]
 vault-protocol-iron-ore=Extract __ITEM__iron-ore__
@@ -259,7 +259,8 @@ bunnyhop-engine-weight-multiplier=__1__%
 rabbasca-warp-pylon-range=__1__x__1__
 
 [rabbasca-extra]
-with-ears= [with E.A.R.S.]
+with-ears=__1__ [with E.A.R.S.]
+with-ears-description=__1__\nMust be placed on [tile=rabbasca-energetic-concrete] or [tile=haronite-plate].
 alertness-ui=[space-location=rabbasca] Alertness: [color=yellow]__1__%[/color]
 alertness-floating=Rabbasca alertness now at: [color=yellow]__1__%[/color]
 bunnyhop-no-target=[item=bunnyhop-engine] No discovered planet within [color=yellow]__1__km[/color]
