@@ -5,7 +5,7 @@ Date: 2025-??-??
     - This update adds challenging content to the late game and reorganizes some rabbascan technologies
     - Purified Harene is now the powerful but hard to create resource it was meant to be
     - Haronite plate and purified harene recipes changed, making them much harder to acquire
-    - Haronite plate is now also a placeable foundation, providing energy to E.A.R.S. cores
+    - Haronite plate is now also placeable on space platforms, providing energy to E.A.R.S. cores
     - Added upgrades to Protein shake, Turbofuel and Beta carotene made from purified harene, requiring promethium science to unlock
     - Added new late-game technology to extract warp pylons from vaults
     - Total available power on Rabbasca can now be changed via setting
@@ -18,12 +18,13 @@ Date: 2025-??-??
     - Quality modules can now be used in vaults
     - Increased vault access console resistances
     - Increased protection pylon max health. It will now stay around a bit longer
-    - Warp pylon construction range now scales with quality (range indicator does not adjust though)
+    - Warp pylon construction range now scales with quality (range indicator does not adjust though). Base range slightly reduced to 20
     - Rocket part from Turbofuel now requires a new item instead of haronite plate to keep the costs reasonable
     - Slightly reduced rocket launching speed of rocket silo with E.A.R.S. 
     - Carotenoid now stacks to 20
   Bugfixes:
     - Fixed Turbofish recycling yielding Protein Shakes
+    - Fixed wrong claims made in E.A.R.S. core 3 tech description
 ---------------------------------------------------------------------------------------------------
 Version: 0.7.4
 Date: 2025-11-25
